changes for refreshscope

--- a/Spring-Ms-Config-Client/src/main/resources/bootstrap.properties
+++ b/Spring-Ms-Config-Client/src/main/resources/bootstrap.properties
@@ -2,3 +2,5 @@ server.port=7777
 spring.profiles.active=development
 spring.application.name=config-demo-client
 spring.cloud.config.uri=http://localhost:9999
+
+management.endpoints.web.exposure.include=*
